@@ -1,0 +1,9 @@
+﻿using Windows.Storage;
+
+namespace ModernKeePass.Interfaces
+{
+    public interface IFormat
+    {
+        IPwEntity Import(IStorageFile source);
+    }
+}
